--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://cbre.referrals.selectminds.com/CBRE0O.bVn'>Associate Project Manager, Healthcare Construction - CBRE Careers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bpcs/jobs/1928884'>Job Application for Customer Success Talent Development Program Manager at Blueprint Technologies</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Charlotte, NC</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585244'>Stellenangebot: Senior Project Manager Event/G?ste Management (m/w) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://cbre.referrals.selectminds.com/CBRE0O.bVn'>Associate Project Manager, Healthcare Construction - CBRE Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://axa.referrals.selectminds.com/jobs/project-manager-finance-business-operations-5780'>Project Manager - Finance Business Operations - AXA | Careers</a></h5> 
@@ -116,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -164,7 +176,7 @@
 <p><span class="badge badge-light">Santa Clara, California  ?San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooITafwT&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nkYppMwn'>ServiceNow Careers - Senior IT Program Manager - Front office applications</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooITafwT&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nkYppMwn'>ServiceNow Careers - Senior IT Program Manager - Front office applications</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -307,7 +319,7 @@
 <p><span class="badge badge-light">Los Angeles, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -353,7 +365,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://warehousegoods.applytojob.com/apply/1u2eLSoKHY/Project-Manager'>Project Manager - Greenlane - Career Page</a></h5> 
+<h5><a href='http://warehousegoods.applytojob.com/apply/1u2eLSoKHY/Project-Manager'>Project Manager - Greenlane - Career Page</a></h5> 
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -435,18 +447,6 @@
 <hr/>
 <h5><a href='https://jobs.lever.co/notonthehighstreet/2801a630-154c-4f12-a53e-767e76174d79'>Notonthehighstreet - Business Development and Strategic Project Manager</a></h5> 
 <p><span class="badge badge-light">Richmond London</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939000'>Job Application for Program Manager, Strategic Planning at Thumbtack</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/americanwell/jobs/4498432002'>Job Application for Project Manager, Health Systems at American Well</a></h5> 
-<p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
