--- a/data-analyst.html
+++ b/data-analyst.html
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Delhi, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/5c4dOnwSL1/Data-Modeling-Analyst'>Data Modeling Analyst - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/5c4dOnwSL1/Data-Modeling-Analyst'>Data Modeling Analyst - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -211,7 +211,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -275,7 +275,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -295,7 +295,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -379,7 +379,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -395,11 +395,11 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
